# htpymodule

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/htpymodule/: __init__.py  core.py
tests/: test_core.py
